Make bulletin smaller, fix layout issue on smaller screens

--- a/src/app/components/daily-bulletin/daily-bulletin.component.scss
+++ b/src/app/components/daily-bulletin/daily-bulletin.component.scss
@@ -5,6 +5,7 @@
   Main Styles
 --------------------------- */
 .container {
+	max-width: 52rem;
 	margin-bottom: 6rem;
 	padding: 2rem 0 0 0;
 	text-align: center;
@@ -100,10 +101,11 @@
 /* --------------------------
   Media Queries
 --------------------------- */
-@media screen and (min-width:544px) {
+@media screen and (min-width: 768px) {
 	.container {
 		.bulletin-header {
 			width: 40rem;
+
 			.bulletin-navigation {
 				.previous-bulletin,
 				.next-bulletin {
